@@ -1,4 +1,8 @@
-﻿shmuel 19.02.2016 21:32:01 +0200 - build 557
+﻿shmuel 19.02.2016 23:36:00 +0200 - build 558
+
+1. Меню, выводимому функцией Panel.CustomSortMenu, присвоен GUID "C323FBCF-6803-4F2C-B8B4-E576E7F125DC".
+
+shmuel 19.02.2016 21:32:01 +0200 - build 557
 
 1. M#3175: "Отключить в LuaMacro редирект WOW64 для функций работы с реестром"
    LuaFAR: добавлена функция win.DeleteRegKeyEx. Описание в мануале.
